--- a/src/styles/Aside.css
+++ b/src/styles/Aside.css
@@ -96,7 +96,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-@media (min-width: 550px) and (max-width: 1000px) {
+@media (min-width: 640px) and (max-width: 1000px) {
   .info-columns {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -131,10 +131,3 @@ h1 {
   }
 }
 
-@media (max-width: 1000px) {
-  .infos-link,
-  .underline-link,
-  .title-text {
-    font-size: 12px;
-  }
-}
